Fixed scope to be specific for collapsed element

--- a/app/webroot/css/bootstrap.app.css
+++ b/app/webroot/css/bootstrap.app.css
@@ -352,3 +352,11 @@ body {
   padding: 10px 0;
   background-color: #ddd;
 }
+
+
+/* Media Queries
+-------------------------------------------------- */
+/* Medium Devices, Desktops */
+	@media only screen and (max-width : 992px) {
+    body{padding-top: 100px;}
+	}
